# e-hentai-tag-count

./: .env.example  .gitignore  README.md  manual_fix.py  parse.sh  perf.sql  pyproject.toml  slave-master-replace.sh  slave-master.csv  slave-merge.py  step0-verify-smmap.py  step1-init_db.py  step1-init_db.sh  step1-verify-smmap.py  step2-export_data.py  step3-manual_fix.py  step4-update.nu  workaround.sh
.github/workflows/: upload.yaml
data/: legacy_fix.csv
smmap_get/: .gitignore  _shrink-input.py  fetch_groups.py  step1-fetch_groups.py  step2-download.sh  step3-export.py
utils/: merge.sh  translation.py
