[project]
name = "e-hentai-tag-count"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.13",
    "connectorx>=0.4.3",
    "polars>=1.31.0",
    "pyarrow>=20.0.0",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.41",
]
